--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,9 @@ spring.datasource.username=usr
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
+spring.jpa.generate-ddl=true
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-spring.jpa.properties.javax.persistence.schema-generation.drop-script-source=drop.sql
 
 spring.datasource.initialization-mode=always
 spring.datasource.data=classpath:data.sql
