--- a/pom.xml
+++ b/pom.xml
@@ -46,17 +46,15 @@
 		</dependency>
 
 
-		<!-- https://mvnrepository.com/artifact/org.webjars/webjars-locator -->
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>webjars-locator</artifactId>
-			<version>0.45</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>bootstrap</artifactId>
-			<version>5.1.3</version>
+			<version>4.0.0-2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>webjars-locator</artifactId>
+			<version>0.30</version>
 		</dependency>
 
 
